<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Discover Devices</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_my">Particulate Matter Measurer</string>

    <string name="search_devices_btn">Connect to devices</string>
    <string name="start_measurement_btn">Start measurement</string>
    <string name="watch_data_btn">Statistics</string>
    <string name="sync_data_btn">Sync data</string>
    <string name="display_connection_info">Connected: - to Device:</string>
    <string name="title_activity_measurement">MeasurementActivity</string>
    <string name="device_name_header"><u>Device</u></string>
    <string name="connection_status_header"><u>Status</u></string>
    <string name="device_name"></string>
    <string name="connection_status"></string>
    <string name="start_measure">Start Measurement</string>
    <string name="stop_measure">Stop Measurement</string>
    <string name="finish_measurement">Finish current measurement</string>

    <string name="this_day_btn">Today</string>
    <string name="this_week_btn">This Week</string>
    <string name="this_month_btn">This Month</string>
    <string name="this_year_btn">This Year</string>

    <string name="y_axes">µg pm / m³</string>
    <string name="x_axes">Number of measurement values</string>
    <string name="kv_values">Values:</string>
    <string name="kv_values_data"></string>
    <string name="kv_distance">Distance(km):</string>
    <string name="kv_distance_data"></string>
    <string name="kv_maxPm10">max. Pm10:</string>
    <string name="kv_maxPmTen_data"></string>
    <string name="kv_maxPm25">max. Pm25:</string>
    <string name="kv_maxPm25_data"></string>
    <string name="kv_avgPmTen">avg. Pm10:</string>
    <string name="kv_avgPmTen_data"></string>
    <string name="kv_avgPmTwentyFive">avg. PM25:</string>
    <string name="kv_avgPmTwentyFive_data"></string>
    <string name="last_sync_text">Last Sync: </string>
    <string name="last_sync_data"></string>
    <string name="unsynced_values">Unsynched Values: </string>
    <string name="unsynced_values_data"></string>
    <string name="period_label">Period:</string>
    <string name="period_data">Select a period!</string>

    <!--Sync string-->
    <string name="local_db_sync_label">Private Server</string>
    <string name="openSenseMap_sync_label">OpenSenseMap</string>
    <string name="host_label">Host: </string>
    <string name="host_url_data" />
    <string name="host_openSenseMap_url_data" />
    <string name="sensor_id_label">SensorBox-ID:</string>
    <string name="openSenseMap_sensor_id_data" />
    <string name="osm_unsyched_values_label">Unsynched Values</string>
    <string name="osm_unsyched_values_data" />
    <string name="osm_last_sync_label">Last Sync</string>
    <string name="osm_last_sync_data" />
    <string name="discover_devices">Discovering Devices</string>
    <string name="statistics_activity_label">Statistics</string>

</resources>
