<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="10"
        android:paddingTop="20dp">
        <!--Values-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/kv_values_static"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/kv_values"
                android:textStyle="bold"
                android:gravity="center_horizontal|right"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/kv_values_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/kv_values_data"
                android:textSize="20sp"/>
        </LinearLayout>
        <!--Distance-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/kv_distance_static"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/kv_distance"
                android:textStyle="bold"
                android:gravity="center_horizontal|right"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/kv_distance_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/kv_distance_data"
                android:textSize="20sp"/>
        </LinearLayout>
        <!--max PM10-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/kv_maxPm10_static"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/kv_maxPm10"
                android:textStyle="bold"
                android:gravity="center_horizontal|right"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/kv_maxPmTen_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/kv_maxPmTen_data"
                android:textSize="20sp"/>
        </LinearLayout>
        <!--max PM25-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/kv_maxPmTwentyFive_static"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/kv_maxPm25"
                android:textStyle="bold"
                android:gravity="center_horizontal|right"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/kv_maxPmTwentyFive_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/kv_maxPm25_data"
                android:textSize="20sp"/>
        </LinearLayout>
        <!--avg. PM10-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/kv_avgPmTen_static"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/kv_avgPmTen"
                android:textStyle="bold"
                android:gravity="center_horizontal|right"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/kv_avgPmTen_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/kv_avgPmTen_data"
                android:textSize="20sp"/>
        </LinearLayout>
        <!--avg. PM25-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/kv_avgPMTwentyFive_static"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/kv_avgPmTwentyFive"
                android:textStyle="bold"
                android:gravity="center_horizontal|right"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/kv_avgPmTwentyFive_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/kv_avgPmTwentyFive_data"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>