<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activities.SyncActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/local_db_sync_label"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/host_private_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:gravity="center_horizontal|right"
            android:text="@string/host_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/host_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/host_url_data"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_last_sync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:gravity="center_horizontal|right"
            android:text="@string/last_sync_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/tv_last_sync_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/last_sync_data"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:textColor="#000000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_unsynced_values_static"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:gravity="center_horizontal|right"
            android:text="@string/unsynced_values"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/tv_unsynced_values_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/unsynced_values_data"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:textColor="#000000"
            />
    </LinearLayout>

    <Button
        style="@style/myBtn"
        android:id="@+id/sync_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sync"
        android:onClick="onSyncBtnClick"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/openSenseMap_sync_label"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/host_openSenseMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:gravity="center_horizontal|right"
            android:text="@string/host_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/host_openSenseMap_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/host_openSenseMap_url_data"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:textColor="#000000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/openSenseMap_sensor_id_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:gravity="center_horizontal|right"
            android:text="@string/sensor_id_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/openSenseMap_sensor_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/openSenseMap_sensor_id_data"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:textColor="#000000"/>
    </LinearLayout>

    <Button
        style="@style/myBtn"
        android:id="@+id/opensensemap_sync_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sync"
        android:onClick="onOpenSenseMapSyncBtnClick"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

</LinearLayout>