<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyActivity">

    <LinearLayout
        android:id="@+id/layout_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <include layout="@layout/on_off_btn_layout" android:id="@+id/switch_btn"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/layout_switch">

        <Button
            android:id="@+id/search_devices_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_devices_btn"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            />
        <Button
            android:id="@+id/start_measurement_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/start_measurement_btn"/>
        <Button
            android:id="@+id/watch_data_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/watch_data_btn"/>
        <Button
            android:id="@+id/sync_data_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/sync_data_btn"/>


    </LinearLayout>
</RelativeLayout>