<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Activities.StatisticsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    style="@style/myBtn"
                    android:id="@+id/today_btn"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:onClick="onTodayBtnClick"
                    android:text="@string/this_day_btn" />

                <Button
                    style="@style/myBtn"
                    android:id="@+id/week_btn"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:onClick="onWeekBtnClick"
                    android:text="@string/this_week_btn" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    style="@style/myBtn"
                    android:id="@+id/month_btn"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:onClick="onMonthBtnClick"
                    android:text="@string/this_month_btn" />

                <Button
                    style="@style/myBtn"
                    android:id="@+id/year_btn"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:onClick="onYearBtnClick"
                    android:text="@string/this_year_btn" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_weight="1"
                android:textColor="#000000"
                android:text="@string/period_label"/>
            <TextView
                android:id="@+id/tv_period_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textColor="#000000"
                android:text="@string/period_data"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/graph_layout"></include>
        </LinearLayout>

        <include layout="@layout/key_values_bottom"></include>
    </LinearLayout>
</ScrollView>