<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:height="40dp"
                android:gravity="center"
                android:text="@string/device_name_header"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:height="40dp"
                android:gravity="center"
                android:text="@string/connection_status_header"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvDeviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:height="40dp"
                android:gravity="center"
                android:text="@string/device_name"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/tvConnectionStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:height="40dp"
                android:gravity="center"
                android:text="@string/connection_status"
                android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/startMeasurementBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_measure"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                />

            <Button
                android:id="@+id/finishMeasurementBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish_measurement"
                android:drawableRight="@drawable/finish_icon"
                android:gravity="center|center_vertical"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvPmTen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="PM 10:"
                android:textSize="40dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tvPmTenValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   -   "
                android:layout_weight="1"
                android:textSize="40dp"
                android:gravity="left"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvPmTwentyFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="PM 25:"
                android:textSize="40dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tvPmTwentyFiveValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   -   "
                android:layout_weight="1"
                android:textSize="40dp"
                android:gravity="left"/>
        </LinearLayout>
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.github.mikephil.charting.charts.LineChart>
    </LinearLayout>

</RelativeLayout>